# revenue-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  PROGRESS.md  README.md  docker-compose.yml  month_end_invoice_agent_design_pattern.md  pyproject.toml
.agent/plans/: 1.finish-approval-inbox.md  2.month-end-invoice-agent.md  3.langgraph-multi-agent-rearchitecture.md  (+6 more)
.claude/: launch.json
app/: .env.example  auth.py  config.py  db.py  db_security.py  main.py  seed.py
docs/: AGENTS.md  ARCHITECTURE.md  BACKLOG.md  SCHEMA.md  SMOKE_TEST_OUTREACH.md  STACK.md  UI_REQUIREMENTS.md
supabase/: config.toml
tests/: conftest.py  test_actions.py  test_activity_builder.py  test_agent_invoke.py  test_agent_messages.py  test_auth.py  test_calc_revenue.py  test_chain_diagram.py  test_chat_router.py  test_chat_runtime.py  test_chat_sessions.py  test_chat_stream.py  test_content_creation_graph.py  test_content_publish_graph.py  test_critique_loop_poc.py  test_db_security.py  test_invoice_operations.py  test_orchestrator.py  test_orchestrator_v2_agent_invoke.py  test_orchestrator_v2_approval_flow.py  test_orchestrator_v2_runner.py  test_orchestrator_v2_spawn.py  test_outreach_graph.py  test_outreach_workflow.py  test_rev_rec_chain.py  test_rev_rec_graph.py  test_runner.py  test_tools.py  test_v2_content_creation_graph.py  test_v2_content_publish_graph.py  test_v2_outreach_graph.py  test_v2_rev_rec_graph.py  test_workflows.py
ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+163 files in other folders)
